--- a/resources/index.html
+++ b/resources/index.html
@@ -4,7 +4,7 @@
 		<title>create-electron-react-app</title>
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
-		<script defer src="../.build/bundle.js"></script>
+		<script defer src="../bundle/bundle.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
